--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "postcss": "^8.4.5",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-pxtorem": "5.1.1",
+    "serve": "^13.0.2",
     "vant": "^2.12.37",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
